feat: good start

--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lei Huang | UIUC</title>
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MP 0</title>
-</head>
+  <body>
+    <div class="container">
+      <h1>Hello CS 409!</h1>
+      <div class="profile-bio-container">
+        <img
+          class="profile-image"
+          src="https://winlere.github.io/assets/img/me_map.jpg"
+        />
+        <p class="email">
+          λ<em>user</em>.λ<em>domain</em>. <em>user</em> [at]
+          <em>domain</em> (leih5) (illinois.edu)
+        </p>
+        
+        <p class="bio">
+          Hi, I am Lei Huang, an MSCS student at
+          <a href="https://illinois.edu/">
+            University of Illinois Urbana-Champaign
+            <img
+              class="logos"
+              src="https://winlere.github.io/assets/img/logos/uiuc.png"
+              alt="UIUC"
+            />
+          </a>
+          advised by
+          <a href="https://huan-zhang.com/"> Prof. Huan Zhang </a>
+          <img
+            class="logos"
+            src="https://huan-zhang.com/favicon.ico"
+            alt="MARIO_LOGO"
+          />.
+        </p>
 
-<body>
-  <h1>Hello World!</h1>
-  <img src="assets/image.jpg" />
+        <p class="bio">
+          I am interested in <strong>Formal Methods</strong>,
+          <strong>Algorithm</strong>, and
+          <strong>High Performance Computing (HPC)</strong>, especially in
+          driving <strong>neural network verification</strong> algorithms with
+          large computation.
+        </p>
 
-  <script src="bundle.js" type="text/javascript"></script>
-</body>
+        <p class="bio">
+          During my undergraduate study, I was fortunate to be advised by
+          <a href="https://zhangyedi.github.io/"> Dr. Yedi Zhang </a>
+          <img
+            class="logos"
+            src="https://winlere.github.io/assets/img/logos/nus.png"
+            alt="NUS"
+          />
+          and
+          <a href="https://songfu1983.github.io/"> Prof. Fu Song </a>
+          <img
+            class="logos"
+            src="https://winlere.github.io/assets/img/logos/cas.png"
+            alt="CAS"
+          />.
+        </p>
+        <p class="bio">
+          Prior to UIUC, I was a Quant System Engineer at
+          <a href="https://www.sixiecapital.com/en"> Sixie Capital </a>
+          <img
+            class="logos"
+            src="https://winlere.github.io/assets/img/logos/sixie.png"
+            alt="sixie"
+          />. And I served as the leader in the ShanghaiTech
+          <a href="https://acm.shanghaitech.edu.cn/">ACM</a>
+          and
+          <a href="https://hpc.geekpie.club/">GeekPie</a>.
+        </p>
+      </div>
+    </div>
 
+    <script src="bundle.js" type="text/javascript"></script>
+  </body>
 </html>
