feat: localize local pictures

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       <div class="profile-bio-container">
         <img
           class="profile-image"
-          src="https://winlere.github.io/assets/img/me_map.jpg"
+          src="assets/me_map.jpg"
         />
         <p class="email">
           λ<em>user</em>.λ<em>domain</em>. <em>user</em> [at]
@@ -26,7 +26,7 @@
             University of Illinois Urbana-Champaign
             <img
               class="logos"
-              src="https://winlere.github.io/assets/img/logos/uiuc.png"
+              src="assets/uiuc.png"
               alt="UIUC"
             />
           </a>
@@ -34,7 +34,7 @@
           <a href="https://huan-zhang.com/"> Prof. Huan Zhang </a>
           <img
             class="logos"
-            src="https://huan-zhang.com/favicon.ico"
+            src="assets/huanzhang.ico"
             alt="MARIO_LOGO"
           />.
         </p>
@@ -52,14 +52,14 @@
           <a href="https://zhangyedi.github.io/"> Dr. Yedi Zhang </a>
           <img
             class="logos"
-            src="https://winlere.github.io/assets/img/logos/nus.png"
+            src="assets/nus.png"
             alt="NUS"
           />
           and
           <a href="https://songfu1983.github.io/"> Prof. Fu Song </a>
           <img
             class="logos"
-            src="https://winlere.github.io/assets/img/logos/cas.png"
+            src="assets/cas.png"
             alt="CAS"
           />.
         </p>
@@ -68,7 +68,7 @@
           <a href="https://www.sixiecapital.com/en"> Sixie Capital </a>
           <img
             class="logos"
-            src="https://winlere.github.io/assets/img/logos/sixie.png"
+            src="assets/sixie.png"
             alt="sixie"
           />. And I served as the leader in the ShanghaiTech
           <a href="https://acm.shanghaitech.edu.cn/">ACM</a>
