feat: align with course desc

--- a/src/index.html
+++ b/src/index.html
@@ -9,16 +9,17 @@
 
   <body>
     <div class="container">
-      <h1>Hello CS 409!</h1>
+      
       <div class="profile-bio-container">
         <img
           class="profile-image"
-          src="assets/me_map.jpg"
+          src="assets/me_map_square.jpg"
         />
+        <h1>Lei Huang</h1>
         <p class="email">
-          λ<em>user</em>.λ<em>domain</em>. <em>user</em> [at]
-          <em>domain</em> (leih5) (illinois.edu)
+          λ<em>domain</em> λ<em>user</em>. <em>user </em>@<em>domain</em> (illinois.edu) (leih5)
         </p>
+        <a href="https://github.com/Winlere"> GitHub</a>
         
         <p class="bio">
           Hi, I am Lei Huang, an MSCS student at
