feat: add bottons

--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,14 @@
           <a href="https://hpc.geekpie.club/">GeekPie</a>.
         </p>
       </div>
+      <!-- /div add three bottons, each will change the background color -->
+      <div class="button-container">
+        <button class="button" id="button1">Theme 1</button>
+        <button class="button" id="button2">Theme 2</button>
+        <button class="button" id="button3">Theme 3</button>
+      </div>
     </div>
+    
 
     <script src="bundle.js" type="text/javascript"></script>
   </body>
