feat: add botons

--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,12 @@
           class="profile-image"
           src="assets/me_map_square.jpg"
         />
-        <h1>Lei Huang</h1>
+        <h1 class="my_name">Lei Huang</h1>
+
         <p class="email">
           λ<em>domain</em> λ<em>user</em>. <em>user </em>@<em>domain</em> (illinois.edu) (leih5)
         </p>
-        <a href="https://github.com/Winlere"> GitHub</a>
+        <a class="github" href="https://github.com/Winlere"> GitHub</a>
         
         <p class="bio">
           Hi, I am Lei Huang, an MSCS student at
