feat: modify github link behaviour

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,8 @@
           λ<em>domain</em> λ<em>user</em>. <em>user </em>@<em>domain</em>
           (illinois.edu) (leih5)
         </p>
-        <a class="github" href="https://github.com/Winlere"> GitHub</a>
+        
+        <a class="github" href="https://github.com/Winlere" target="_blank"> GitHub</a>
 
         <p class="bio">
           Hi, I am Lei Huang, an MSCS student at
