--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lei Huang | UIUC</title>
+    <link rel="icon" href="assets/favicon.ico" />
   </head>
 
   <body>
